2023-10-09T16:17:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6459206062 # 1972
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-09
* notice: last 14d: unq all: 26 57
* notice: prev accum: outdated-unq outdated-all / unq all: 1226 3029 / 1269 3088
* notice: next accum: outdated-unq outdated-all / unq all: 1229 3033 / 1270 3090
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +4 +5 -0 -0 / 4 5
* notice: removed / changed dates: [2023-09-25] / [2023-10-09]

2023-10-09T08:17:29Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6454054265 # 1971
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-09
* notice: last 14d: unq all: 27 58
* notice: prev accum: outdated-unq outdated-all / unq all: 1226 3029 / 1266 3085
* notice: next accum: outdated-unq outdated-all / unq all: 1226 3029 / 1269 3088
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -0 -1 / +3 +3 -0 -0 / 3 3
* notice: removed / changed dates: [] / [2023-09-25 2023-10-09]

2023-10-08T16:14:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6448677678 # 1969
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-08
* notice: last 14d: unq all: 26 56
* notice: prev accum: outdated-unq outdated-all / unq all: 1222 3024 / 1265 3084
* notice: next accum: outdated-unq outdated-all / unq all: 1226 3029 / 1266 3085
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +9 +10 -0 -0 / 9 10
* notice: removed / changed dates: [2023-09-24] / [2023-10-08]

2023-10-08T08:14:28Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6446468258 # 1968