@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-09T16:17:22Z",
-  "count" : 5,
-  "count_minmax" : [ 3, 5 ],
-  "count_decinc" : [ -0, +5 ],
-  "uniques" : 4,
-  "uniques_minmax" : [ 3, 4 ],
-  "uniques_decinc" : [ -0, +4 ]
+  "timestamp" : "2023-10-10T00:56:54Z",
+  "count" : 9,
+  "count_minmax" : [ 3, 9 ],
+  "count_decinc" : [ -0, +9 ],
+  "uniques" : 7,
+  "uniques_minmax" : [ 3, 7 ],
+  "uniques_decinc" : [ -0, +7 ]
 }
