@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-09T16:17:22Z",
+  "timestamp" : "2023-10-10T00:56:54Z",
   "count_outdated" : 3033,
   "uniques_outdated" : 1229,
-  "count" : 3090,
-  "uniques" : 1270,
+  "count" : 3094,
+  "uniques" : 1273,
   "clones" : [
     {
       "timestamp": "2023-09-26T00:00:00Z",
@@ -124,12 +124,12 @@
     },
     {
       "timestamp": "2023-10-09T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 3, 5 ],
-      "count_decinc": [ 0, 5 ],
-      "uniques": 4,
-      "uniques_minmax": [ 3, 4 ],
-      "uniques_decinc": [ 0, 4 ]
+      "count": 9,
+      "count_minmax": [ 3, 9 ],
+      "count_decinc": [ 0, 9 ],
+      "uniques": 7,
+      "uniques_minmax": [ 3, 7 ],
+      "uniques_decinc": [ 0, 7 ]
     }
   ]
 }
