@@ -1,6 +1,6 @@
 {
-  "count": 57,
-  "uniques": 26,
+  "count": 61,
+  "uniques": 29,
   "clones": [
     {
       "timestamp": "2023-09-26T00:00:00Z",
@@ -69,8 +69,8 @@
     },
     {
       "timestamp": "2023-10-09T00:00:00Z",
-      "count": 5,
-      "uniques": 4
+      "count": 9,
+      "uniques": 7
     }
   ]
 }
